# zero2prod

./: .dockerignore  .env  .rusty-hook.toml  Cargo.toml  Dockerfile  justfile  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20240405143722_make_status_not_null_in_subscriptions.sql
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
