[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Christian Sergienko <iam@theonewho.codes>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11.24"
