[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Christian Sergienko <iam@theonewho.codes>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.5.1"
chrono = { version = "0.4.34", features = ["clock"] }
claims = "0.7.1"
config = "0.14.0"
env_logger = "0.11.2"
log = "0.4.21"
once_cell = "1.19.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-aux = "4.5.0"
sqlx = { version = "0.7.3", features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "rt"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.9"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }
unicode-segmentation = "1.11.0"
uuid = { version = "1.7.0", features = ["v4"] }
validator = "0.16.0"
reqwest = { version = "0.11.24", default-features = false, features = [
  "json",
  "rustls-tls",
] }
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.59"
anyhow = "1.0.83"

[dev-dependencies]
rusty-hook = "0.11.2"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3"
wiremock = "0.6.0"
serde_json = "1.0.114"
linkify = "0.9"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
debug = 0
opt-level = 1
